WFNEWS-256 Stages of Control accordion

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
@@ -73,7 +73,7 @@
 
 <div class="bottom">
     <mat-accordion class="details">
-        <mat-expansion-panel #WildfireStageOfControl class="wildfire-stage-of-control">
+        <mat-expansion-panel #WildfireStageOfControl class="wildfire-stage-of-control" [expanded]="true">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                     Wildfire Stage of Control
