--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -6,3 +6,64 @@
     </span>
     <button mat-raised-button class="list-view-button"> List View</button>
 </div>
+
+<section>
+    <h1>LEGEND & DEFINITIONS</h1>
+    <article>
+        <p>
+            The BC Wildfire Service uses stages of control to report on progress.
+        </p>
+    </article>
+    <article>
+        <h2 class="black">
+            <div class="fire-icon-container">
+                <mat-icon class="fire-icon">local_fire_department</mat-icon>
+            </div>
+             Wildfire of Note
+        </h2>
+        <p>
+            A wildfire that is highly visible or poses a potential threat to public safety.
+        </p>
+    </article>
+    <article>
+        <h2 class="orange">New Incidents</h2>
+        <p>
+            A new wildfire that has been posted within the last 24 hours.
+        </p>
+    </article>
+    <article>
+        <h2 class="red">Out of Control</h2>
+        <p>
+            A wildfire that is continuing to spread and is not responding to suppression efforts.
+        </p>
+    </article>
+    <article>
+        <h2 class="yellow">Being Held</h2>
+        <p>
+            A  wildfire that is not likely to spread beyond predetermined boundaries under current conditions.
+        </p>
+    </article>
+    <article>
+        <h2 class="green">Under Control</h2>
+        <p>
+            A wildfire that will not spread any further due to suppression efforts.
+        </p>
+    </article>
+    <article>
+        <h2 class="grey">Out</h2>
+        <p>
+            A wildfire that is extinguished.  Suppression efforts are complete.
+        </p>
+    </article>
+</section>
+<section>
+    <h1>MORE INFORMATION</h1>
+    <article>
+        <p>
+            <a href="">Wildfires Stages of Control</a>
+        </p>
+        <p>
+            <a href="">Plan, Prepare, Stay Informed</a>
+        </p>
+    </article>
+</section>
