--- a/client/wfnews-war/src/main/angular/src/app/components/common/base-collection/collection.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/common/base-collection/collection.component.scss
@@ -95,7 +95,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    align-items: flex-end;
+    align-items: center;
     font-family: $font-family-main;
     line-height: 35px;
 
