--- a/client/wfnews-war/src/main/angular/src/styles/_variables.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/_variables.scss
@@ -19,6 +19,12 @@ $colour-white: #ffffff;
 $colour-errors: #f44336;
 $colour-warnings: orange;
 $colour-orange: #F59A23;
+$colour-lighter-grey: #f2f2f2;
+$opacity-light-grey: rgba(0, 0, 0, 0.06);
+$colour-light-orange: #FFD3A0;
+
+
+
 
 $colour-toolbar-background: rgb(192, 198, 202);
 
@@ -56,6 +62,8 @@ $colour-sidebar-filter-background: $colour-white;
 
 $colour-header-background: #003366;
 
+$colour-success: #2E7940;
+
 /**
  Spacing Variables
  */
@@ -91,3 +99,19 @@ $wf1-app-header-mobile-height: 4rem;
 $wf1-app-map-mobile-height: calc(100vh - (7rem));
 $wf1-loading-screen-height: calc(100vh - (6rem));
 $max-component-width: 65rem;
+
+// Tables measurements
+$font-family-main: 'BCSans', 'Noto Sans', 'Verdana', 'Arial', 'sans-serif';
+$font-size: 15px;
+$colour-button-primary: $colour-blue;
+$colour-intermediate-action: $colour-success;
+$colour-table-background-odd: $colour-lighter-grey;
+$font-family-emphasis: 'BCSans', 'Noto Sans', 'Verdana', 'Arial', 'sans-serif';
+$font-size-small: 12px;
+$wf1-border-radius: 5px;
+$font-weight-emphasis: 400;
+$font-weight: 200;
+$colour-table-background-even: $colour-white;
+$colour-table-background-hover: $colour-medium-grey;
+
+
