first store created for getIncident

--- a/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.html
@@ -47,7 +47,7 @@
             (matSortChange)="sortData($event)">
         <ng-container matColumnDef = "fireNumber">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fire Number</th>
-            <td mat-cell style="cursor: pointer;" *matCellDef="let item"><span #el >{{item.incidentNumberSequence}}</span></td>
+            <td mat-cell style="cursor: pointer;" *matCellDef="let item" (click)="selectIncident(item)"><span #el >{{item.incidentNumberSequence}}</span></td>
         </ng-container>
 
         <ng-container matColumnDef = "fireName">
