more hook up and styling on admin table

--- a/client/wfnews-war/src/main/angular/src/app/app.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.html
@@ -6,10 +6,12 @@
     <wf-header
         [config]="applicationConfig"
         [(state)]="applicationState"
-        [useAppLogo]="isAdminPage()"
+        [useAppLogo]="false"
         [useSystemAndUser]="isAdminPage()"
+        [useSupportLink]="isAdminPage()"
         [useMenu]="isAdminPage()"
         (bcLogoClick)="navigateToBcWebsite()"
+        (onSupportLinkClick)="navigateToBcSupport()"
         (navigateToBcSupport)="navigateToBcSupport()"
     ></wf-header>
 
