admin-incident form hook up (#40)
* add AuthGuard to Admin's routing

* add webade oAuth in config.jsp

* first store created for getIncident

* more hook up and styling on admin table

* useAppLogo -> isAdminPage

--- a/client/wfnews-war/src/main/angular/src/app/app.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.html
@@ -8,8 +8,10 @@
         [(state)]="applicationState"
         [useAppLogo]="isAdminPage()"
         [useSystemAndUser]="isAdminPage()"
+        [useSupportLink]="isAdminPage()"
         [useMenu]="isAdminPage()"
         (bcLogoClick)="navigateToBcWebsite()"
+        (onSupportLinkClick)="navigateToBcSupport()"
         (navigateToBcSupport)="navigateToBcSupport()"
     ></wf-header>
 
