--- a/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.html
@@ -41,13 +41,13 @@
 
 
 <div class="table-wrapper flex-y-grow" *ngIf="collectionData; else loading">
-    <table mat-table matSort [dataSource]="collectionData | paginate:config"
+    <table style = "width: fit-content;" mat-table matSort [dataSource]="collectionData | paginate:config"
             [matSortActive]="this.searchState.sortParam"
             [matSortDirection]="this.searchState.sortDirection.toLowerCase()"
             (matSortChange)="sortData($event)">
         <ng-container matColumnDef = "fireNumber">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fire Number</th>
-            <td mat-cell style="cursor: pointer;" *matCellDef="let item"><span #el >{{item.incidentNumberSequence}}</span></td>
+            <td mat-cell style="cursor: pointer;" *matCellDef="let item" (click)="selectIncident(item)"><span #el >{{item.incidentNumberSequence}}</span></td>
         </ng-container>
 
         <ng-container matColumnDef = "fireName">
@@ -67,7 +67,7 @@
 
         <ng-container matColumnDef = "lastPublished">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Published</th>
-            <td mat-cell style="cursor: pointer;" *matCellDef="let item"><span #el >{{convertToDate(item.discoveryTimestamp)}}</span></td>
+            <td mat-cell style="cursor: pointer;" *matCellDef="let item" [matTooltip]="convertToDate(item.discoveryTimestamp)"><span #el >{{convertToDate(item.discoveryTimestamp)}}</span></td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay;sticky:true"></tr>
