Fix style for select boxes

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.scss
@@ -113,6 +113,11 @@
 		display: flex;
 		flex-wrap: wrap;
 
+    .size-unset {
+			box-sizing: border-box;
+			padding: .5rem 1rem;
+		}
+
 		.size-third {
 			flex: 0 0 33.33%;
 			box-sizing: border-box;
