--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
@@ -33,16 +33,16 @@
   <mat-card class="info-card news-form-card">
     <fieldset class="field-set">
       <div class="news-form">
-        <div class="field size-third">
+        <div class="field size-unset">
           <mat-form-field appearance="standard" floatLabel="always">
-            <mat-label class="label required">Size Type</mat-label>
+            <mat-label class="label">Size Type</mat-label>
             <input matInput class="disabled-input" type="text" placeholder="Size Type" formControlName="sizeType" disabled>
           </mat-form-field>
         </div>
-        <div class="field size-third">
+        <div class="field size-unset">
           <mat-form-field appearance="standard" floatLabel="always">
-            <mat-label class="label required">Size</mat-label>
-            <input matInput class="disabled-input" type="text" placeholder="Size" formControlName="incidentLocation.latitude" disabled>
+            <mat-label class="label">Size</mat-label>
+            <input matInput class="disabled-input" type="text" placeholder="Size" formControlName="size" disabled>
           </mat-form-field>
         </div>
         <div class="field size-full">
