--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -144,3 +144,8 @@ mat-panel-title {
 ::ng-deep .mat-expansion-indicator {
   margin-right: 10px;
 }
+
+::ng-deep .paragraph-format {
+  font-size: 13px;
+  line-height: 1.5;
+}
