--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.scss
@@ -125,6 +125,24 @@
 			padding: .5rem 1rem;
 		}
 
+    .size-quarter {
+			flex: 0 0 25%;
+			box-sizing: border-box;
+			padding: .5rem 1rem;
+		}
+
+    .size-sixth {
+			flex: 0 0 16.66%;
+			box-sizing: border-box;
+			padding: .5rem 1rem;
+		}
+
+    .size-eigth {
+			flex: 0 0 12.25%;
+			box-sizing: border-box;
+			padding: .5rem 1rem;
+		}
+
 		.size-half {
 			flex: 0 0 50%;
 			box-sizing: border-box;
