--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
@@ -41,7 +41,7 @@
             [class.active]="selectedLayer === 'smoke-forecast'"
             (click)="onSelectLayer( 'smoke-forecast' )"
         >
-            <wf-icon class="icon" iconName="filter_drama" iconSize="small"></wf-icon>
+            <wf-icon class="icon" iconName="air" iconSize="small"></wf-icon>
             Smoke Forecast
         </div>
 
@@ -49,7 +49,7 @@
             [class.active]="selectedLayer === 'fire-danger'"
             (click)="onSelectLayer( 'fire-danger' )"
         >
-            <wf-icon class="icon" iconName="format_list_bulleted" iconSize="small"></wf-icon>
+            <wf-icon class="icon" iconName="format_list_numbered" iconSize="small"></wf-icon>
             Danger Rating
         </div>
 
