Adding bans and prohibitions panel

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
@@ -108,7 +108,7 @@
                     Bans and Prohibitions
                 </mat-panel-title>
             </mat-expansion-panel-header>
-
+            <panel-bans-prohibitions></panel-bans-prohibitions>
         </mat-expansion-panel>
 
         <mat-expansion-panel #SmokeForecast class="smoke-forecast">
