Add Firesmoke Panel

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
@@ -117,7 +117,7 @@
                     Smoke Forecast
                 </mat-panel-title>
             </mat-expansion-panel-header>
-
+            <panel-smoke-forecast></panel-smoke-forecast>
         </mat-expansion-panel>
 
         <mat-expansion-panel #FireDanger class="fire-danger">
