Use paragraph formatting

--- a/client/wfnews-war/src/main/angular/src/app/components/panel-smoke-forecast/panel-smoke-forecast.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-smoke-forecast/panel-smoke-forecast.component.html
@@ -3,21 +3,21 @@
     <article>
         <img src="../../../assets/images/firesmoke-legend.png" />
         <h3>Smoke Forecast</h3>
-        <p>
+        <p class="paragraph-format">
           The unit of measure for our smoke forecasts is "micrograms of PM2.5 per cubic meter (µg/m³)" at ground level. PM2.5 (particulate matter 2.5) is fine inhalable particles that are 2.5 micrometers and smaller. PM2.5 poses the highest risk to health from smoke, and the Canadian Council of Ministers of the Environment (CCME) in their most recent air quality report has set the following standards for exposure to this carcinogen:
         </p>
-        <div class="list-rows">
+        <div class="list-rows paragraph-format">
           <ul>
             <li>27 µg/m³ (daily average),</li>
             <li>8.8 µg/m³ (annual mean).</li>
           </ul>
         </div>
         <h3>Wildfire Smoke and Your Health</h3>
-        <p>
+        <p class="paragraph-format">
           Forest fire smoke is a complex and dynamic mixture of gases and very small particles that can irritate the respiratory system and cause systemic inflammation.
         </p>
         <p>Advice to minimize health effects:</p>
-        <div class="list-rows">
+        <div class="list-rows paragraph-format">
           <ul>
             <li>If you have a chronic condition, have rescue medication on hand at all times and a plan to follow if your rescue medication cannot bring your condition under control.</li>
             <li>Look for indoor environments that might be less smoky, such as shopping malls, community centres and libraries.</li>
@@ -25,7 +25,7 @@
             <li>Keep hydrated as it helps your body deal with inflammation.</li>
           </ul>
         </div>
-        <p>
+        <p class="paragraph-format">
           If you are feeling unwell, remember you can call 8-1-1, a free-of-charge provincial health information and advice phone line available in British Columbia. If you or a loved one is experiencing a medical emergency, please call 9-1-1.
         </p>
     </article>
