Use paragraph-format

--- a/client/wfnews-war/src/main/angular/src/app/components/panel-bans-prohibitions/panel-bans-prohibitions.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-bans-prohibitions/panel-bans-prohibitions.component.html
@@ -3,7 +3,7 @@
     <article>
         <h2 class="yellow">Bans and Prohibitions</h2>
         <h3>Category 3 Open Fires</h3>
-        <div class="list-rows">
+        <div class="list-rows paragraph-format">
           <ul>
             <li>Any fire Larger than 2 metres high by 3 metres wide</li>
             <li>3 or more concurrently burning piles each no larger than 2 metres height and 3 metres wide</li>
@@ -13,7 +13,7 @@
           <img class="image-size" src="../../../assets/images/Category 3 Image.svg" alt="Category 3" />
         </div>
         <h3>Category 2 Open Fires</h3>
-        <div class="list-rows">
+        <div class="list-rows paragraph-format">
           <ul>
             <li>1 to 2 concurrently burning piles each no larger than 2 metres height and 3 metres wide</li>
             <li>Stuble or grass burning over an area greater than 0.2 hectares</li>
@@ -21,7 +21,7 @@
           <img class="image-size" src="../../../assets/images/Category 2 Size.svg" alt="Category 2" />
         </div>
         <h3>Campfires</h3>
-        <div class="list-rows">
+        <div class="list-rows paragraph-format">
           <ul>
             <li>Any fire smaller than 0.5 metres high by 0.5 metres wide</li>
           </ul>
