Add danger rating panel

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
@@ -126,7 +126,7 @@
                   Danger Rating
                 </mat-panel-title>
             </mat-expansion-panel-header>
-
+            <panel-fire-danger></panel-fire-danger>
         </mat-expansion-panel>
 
         <mat-expansion-panel #LocalAuthorities class="local-authorities">
