Add Area restrictions panel

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
@@ -99,7 +99,7 @@
                     Area Restrictions
                 </mat-panel-title>
             </mat-expansion-panel-header>
-
+            <panel-area-restrictions></panel-area-restrictions>
         </mat-expansion-panel>
 
         <mat-expansion-panel #BansAndProhibitions class="bans-and-prohibitions">
